# CFL_v2

./: CFL  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cc
configuration/: config.h  types.h
graph/: CMakeLists.txt  graph.cpp  graph.h
matching/: CMakeLists.txt  build_table.cpp  build_table.h  evaluate_query.cpp  evaluate_query.h  filter_vertices.cpp  filter_vertices.h  generate_filtering_plan.cpp  generate_filtering_plan.h  generate_query_plan.cpp  generate_query_plan.h  matching_command.cpp  matching_command.h
utility/: CMakeLists.txt  graph_operations.cpp  graph_operations.h
